--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ bld/
 
 # bin
 bin/
-obj/
+WinFormsApp1/obj/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
